Prepare automated patch releases for May 2023 (#35110)
* Updated list of libraries to patch in patch-release.yml

* Reset sources for azure-data-appconfiguration to the release version 1.4.4.

* Prepare azure-data-appconfiguration for 1.4.5 patch release.

* Reset sources for azure-messaging-eventhubs-checkpointstore-blob to the release version 1.16.5.

* Prepare azure-messaging-eventhubs-checkpointstore-blob for 1.16.6 patch release.

* Reset sources for azure-communication-sms to the release version 1.1.12.

* Prepare azure-communication-sms for 1.1.13 patch release.

* Reset sources for azure-monitor-ingestion to the release version 1.0.2.

* Prepare azure-monitor-ingestion for 1.0.3 patch release.

* Reset sources for azure-security-confidentialledger to the release version 1.0.8.

* Prepare azure-security-confidentialledger for 1.0.9 patch release.

* Reset sources for azure-communication-chat to the release version 1.3.7.

* Prepare azure-communication-chat for 1.3.8 patch release.

* Reset sources for azure-communication-phonenumbers to the release version 1.1.1.

* Prepare azure-communication-phonenumbers for 1.1.2 patch release.

* Reset sources for azure-storage-file-datalake to the release version 12.15.1.

* Prepare azure-storage-file-datalake for 12.15.2 patch release.

* Reset sources for azure-mixedreality-authentication to the release version 1.2.12.

* Prepare azure-mixedreality-authentication for 1.2.13 patch release.

* Reset sources for azure-security-keyvault-certificates to the release version 4.5.1.

* Prepare azure-security-keyvault-certificates for 4.5.2 patch release.

* Reset sources for azure-storage-blob to the release version 12.22.1.

* Prepare azure-storage-blob for 12.22.2 patch release.

* Reset sources for azure-data-tables to the release version 12.3.10.

* Prepare azure-data-tables for 12.3.11 patch release.

* Reset sources for azure-security-keyvault-administration to the releas